<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#000000"
    android:backgroundTint="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/scorevalue"
            android:textColor="#EDE7F6"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/highscore"
            android:textColor="#EDE7F6"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/best_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/highscorevalue"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/lives_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/flags_lk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="72dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option1Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="62dp"
            android:backgroundTint="@color/default_btn_col"
            android:textColor="@color/black"
            android:text="@string/option1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option2Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="62dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/default_btn_col"
            android:textColor="@color/black"
            android:text="@string/option2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option3Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="62dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/default_btn_col"
            android:textColor="@color/black"
            android:text="@string/option3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/option4Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="62dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/default_btn_col"
            android:textColor="@color/black"
            android:text="@string/option4" />
    </LinearLayout>

</LinearLayout>