<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="32dp"
    android:paddingEnd="16dp"
    android:paddingBottom="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="84dp"
        android:fontFamily="@font/roboto"
        android:text="@string/settings_header"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/sound"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sound_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:thumbTint="@color/white"
            app:trackTint="@drawable/switch_track_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    </LinearLayout>
    <Button
        android:id="@+id/clear_high_score_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/wrong"
        android:text="@string/clear_high_score" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/roboto"
            android:text="@string/privacy"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/roboto"
            android:text="@string/aboutus"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>