<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="185dp"
            android:layout_height="220dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title"
            android:textColor="#FFFFFF"
            android:textSize="44sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_new_game_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:text="@string/home_new_game"
            android:textColor="@color/black"
            android:backgroundTint="@color/default_btn_col" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_settings_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/default_btn_col"
            android:textColor="@color/black"
            android:text="@string/home_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_exit_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/default_btn_col"
            android:textColor="@color/black"
            android:text="@string/home_exit" />

    </LinearLayout>
</LinearLayout>
